testsuite/tests/grammar/invalid_lkt/transform_invalid_node.lkt
grammar FooGrammar {
    @main_rule main_rule <- NoSuchNode("example")
}
